Improved GlassFishNamingBuilder exception when JPMS prohibited our call
Signed-off-by: David Matějček <david.matejcek@omnifish.ee>